JSWOC-19752-Category Filter changes (#99)